--- a/willowContact.html
+++ b/willowContact.html
@@ -14,29 +14,31 @@
     <script src="https://kit.fontawesome.com/57818ef07c.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <!-- topNavBar BEGINS-->
+    <nav class="topNavBar">
+        <div class="wrapper">
+            <ul class="topNavBar__list">
+                <li class="topNavBar__item">
+                    <a href="index.html" class="topNavBar__link">Home</a>
+                </li>
+                <li class="topNavigation__item">
+                    <a href="index.html#about" class="topNavBar__link">About</a>
+                </li>
+                <li class="topNavBar__item">
+                    <a href="#" class="topNavBar__link" class="willowLogo">Willow</a>
+                </li>
+                <li class="topNavBar__item">
+                    <a href="willowBlogPost.html" class="topNavBar__link">Blog</a>
+                </li>
+                <li class="topNavBar__item">
+                    <a href="#" class="topNavBar__link">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <!-- topNavBar ENDS -->
     <!-- HEADER BEGINS -->
-    <header>
-        <nav class="topNavigation">
-            <div class="wrapper">
-                <ul class="topNavigation__list">
-                    <li class="topNavigation__item">
-                        <a href="index.html" class="topNavigation__link">Home</a>
-                    </li>
-                    <li class="topNavigation__list">
-                        <a href="index.html#about" class="topNavigation__link">About</a>
-                    </li>
-                    <li class="topNavigation__list">
-                        <a href="#" class="topNavigation__link">Willow</a>
-                    </li>
-                    <li class="topNavigation__list">
-                        <a href="willowBlogPost.html" class="topNavigation__link">Blog</a>
-                    </li>
-                    <li class="topNavigation__list">
-                        <a href="#" class="topNavigation__link">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+    <header class="homeHeader">
         <h2>Contact Me</h2>
     </header>
     <!-- HEADER ENDS -->
