Whos willow section complete

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     <!-- topNavBar ENDS -->
     <!-- HEADER BEGINS -->
     <header class="homeHeader">
-        <div class="wrapper homeHeaderWrapper">
-            <img src="./willowAssets/circle-text.png" alt="Text that says 'Daily Musings Of'" class="homeHeaderWrapper__circleImg">
-            <h1 class="homeHeaderWrapper__title">Willow</h1>
-            <img src="./willowAssets/home-image-1.jpeg" alt="photo of Willow in a mustard yellow jacket with palm leaves in the background" class="homeHeaderWrapper__mainProfileImg">
+        <div class="wrapper homeHeader__wrapper">
+            <img src="./willowAssets/circle-text.png" alt="Text that says 'Daily Musings Of'">
+            <h1>Willow</h1>
+            <img src="./willowAssets/home-image-1.jpeg" alt="photo of Willow in a mustard yellow jacket with palm leaves in the background" class="homeHeader__mainProfileImg">
         </div>
     </header>
     <!-- HEADER ENDS -->
@@ -51,10 +51,10 @@
     <main>
         <!-- whoseWillow SECTION BEGINS -->
         <section class="whoseWillow">
-            <div class="wrapper whoseWillowWrapper">
-                <h3 id="about" class="whoseWillowWrapper__title">Who's Willow?</h3>
-                <p>Cras quis nulla commodo, aliquam lectus sed, blandit augue. Cras ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta. Nam condimentum vitae ligula vel ornare. Phasellus at semper turpis. Nunc eu tellus tortor. Etiam at condimentum nisl, vitae sagittis orci. Donec id dignissim nunc. Donec elit ante, eleifend a dolor et, venenatis facilisis dolor.</p>
-                <button>Find out more</button>
+            <div class="wrapper whoseWillow__wrapper">
+                <h3 id="about">Who's Willow?</h3>
+                <p class="whoseWillow__text">Cras quis nulla commodo, aliquam lectus sed, blandit augue. Cras ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta. Nam condimentum vitae ligula vel ornare. Phasellus at semper turpis. Nunc eu tellus tortor. Etiam at condimentum nisl, vitae sagittis orci. Donec id dignissim nunc. Donec elit ante, eleifend a dolor et, venenatis facilisis dolor.</p>
+                <button class="whoseWillow__button">Find out more</button>
             </div>
         </section>
         <!-- whoseWillow SECTION ENDS -->
@@ -102,7 +102,7 @@
         <!-- willowsJourney SECTION ENDS -->
         <!-- fullWidthMeadowImage SECTION BEGINS-->
         <section class="fullWidthMeadowImage">
-            <img src="./willowAssets/home-image-5.jpg" alt="yellow house at the end of a grassy meadow, with mountains and mist in the background">
+            <img src="./willowAssets/home-image-5.jpg" alt="yellow house at the end of a grassy meadow, with mountains and mist in the background" class="fullWidthMeadowImage__img">
         </section>
         <!-- fullWidthMeadowImage SECTION ENDS -->
         <!-- threeImageGallery SECTION BEGINS -->
