fullWidthMeadow section complete

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
         </section>
         <!-- willowsJourney SECTION ENDS -->
         <!-- fullWidthMeadowImage SECTION BEGINS-->
-        <section class="fullWidthMeadowImage">
-            <img src="./willowAssets/home-image-5.jpg" alt="yellow house at the end of a grassy meadow, with mountains and mist in the background" class="fullWidthMeadowImage__img">
+        <section class="fullWidthMeadow">
+            <img src="./willowAssets/home-image-5.jpg" alt="yellow house at the end of a grassy meadow, with mountains and mist in the background" class="fullWidthMeadow__img">
         </section>
         <!-- fullWidthMeadowImage SECTION ENDS -->
         <!-- threeImageGallery SECTION BEGINS -->
