updated favouriteAndBucket Section

--- a/index.html
+++ b/index.html
@@ -60,25 +60,25 @@
         <!-- whoseWillow SECTION ENDS -->
         <!-- favouriteAndBucket SECTION BEGINS -->
         <section class="favouriteAndBucket">
-            <div class="wrapper">
+            <div class="wrapper favouriteAndBucket__wrapper">
                 <section class="favouriteThings">
-                    <div class="favouriteThings__box ftImg">
-                        <img src="./willowAssets/home-image-2.jpg" alt="white bridge in front of a waterfall, white light shining down from sky behind bridge">
+                    <div class="favouriteThings__box">
+                        <img src="./willowAssets/home-image-2.jpg" alt="white bridge in front of a waterfall, white light shining down from sky behind bridge" class="favouriteThings__image">
                     </div>
-                    <div class="favouriteThings__box ftText">
+                    <div class="favouriteThings__box">
                         <h4>Favourite Things</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et risus nec orci ornare condimentum. Nam suscipit odio lorem, id vestibulum lacus tristique eu. Sed urna ex, porttitor nec iaculis at.</p>
-                        <button>Read more</button>
+                        <p class="favouriteThings__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et risus nec orci ornare condimentum. Nam suscipit odio lorem, id vestibulum lacus tristique eu. Sed urna ex, porttitor nec iaculis at.</p>
+                        <button class="favouriteThings__button">Read more</button>
                     </div>
                 </section>
                 <section class="bucketList">
-                    <div class="bucketList__box blImg">
-                        <img src="./willowAssets/home-image-3.jpg" alt="bluish-white waterlily on water with reflection and lilypads behind it">
+                    <div class="bucketList__box">
+                        <img src="./willowAssets/home-image-3.jpg" alt="bluish-white waterlily on water with reflection and lilypads behind it" class="bucketList__image">
                     </div>
-                    <div class="bucketList___box blText">
-                        <h4>Bucket List</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et risus nec orci ornare condimentum. Nam suscipit odio lorem, id vestibulum lacus tristique eu. Sed urna ex, porttitor nec iaculis at.</p>
-                        <button>Read more</button>
+                    <div class="bucketList__box">
+                        <h4 class="bucketList__title">Bucket List</h4>
+                        <p class="bucketList__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et risus nec orci ornare condimentum. Nam suscipit odio lorem, id vestibulum lacus tristique eu. Sed urna ex, porttitor nec iaculis at.</p>
+                        <button class="bucketList__button">Read more</button>
                     </div>
                 </section>
             </div>
@@ -86,12 +86,12 @@
         <!-- favouriteAndBucket SECTION ENDS -->
         <!-- willowsJourney SECTION BEGINS -->
         <section class="willowsJourney">
-            <div class="wrapper">
-                <div class="willowsJourneyContainer">
-                    <div class="willowsJourneyContainer__box wjImg">
+            <div class="wrapper willowsJourney__wrapper">
+                <div class="willowsJourney__container">
+                    <div class="willowsJourney__imgBox">
                         <img src="./willowAssets/home-image-4.jpg" alt="Willow entering a leafy garden wearing a mustard yellow jacket">
                     </div>
-                    <div class="willowsJourneyContainer__box wjText">
+                    <div class="willowsJourney__textBox">
                         <h3>Willow's Journey</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pulvinar tortor nulla elementum eleifend. Vestibulum consequat vestibulum felis pharetra luctus. Quisque interdum orci quis convallis dapibus nulla pulvinar tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pulvinar tortor nulla elementum eleifend. Vestibulum consequat vestibulum felis pharetra luctus.</p>
                         <button>Find out more</button>
