--- a/willowBlogPost.html
+++ b/willowBlogPost.html
@@ -44,7 +44,7 @@
     <!-- HEADER ENDS -->
 
     <section class="midPortion">
-        <div class="wrapper">
+        < class="wrapper">
             <!-- ARTICLE BEGINS -->
             <article>
                 <h4>My favourite travel destinations</h4>
@@ -94,26 +94,26 @@
 
             <!-- COMMENTS SECTION BEGINS -->
             <section class="comments">
-                <section class="commentsContainer">
-                    <div class="commentsContainer__box commentOne">
-                        <div class="commentsContainer__image">
+                <ul class="commentsList">
+                    <li class="commentsList__item commentOne">
+                        <div class="commentsList__image">
                             <img src="willowAssets/blog-image-3.jpg" alt="person with long brown hair wearing black hat tucking hair behind their ear">
                         </div>
-                        <div class="commentsContainer__text">
+                        <div class="commentsList__text">
                             <p>Tuesday October 9th, 2018 by Barb</p>
                             <p>Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend lacus, vitae ullamcorper metus. Sed sollicitudin ipsum quis nunc sollicitudin ultrices. Donec euismod scelerisque ligula. Maescenas eu varius risus, eu aliquet arcu.</p>
                         </div>
-                    </div>
-                    <div class="commentsContainer__box commentTwo">
-                        <div class="commentsContainer__image">
+                    </li>
+                    <li class="commentsList__item commentTwo">
+                        <div class="commentsList__image">
                             <img src="willowAssets/blog-image-4.jpg" alt="person smiling into the distance">
                         </div>
-                        <div class="commentsContainer__text">
+                        <div class="commentsList__text">
                             <p>Wednesday October 10th, 2018 by Daisy</p>
                             <p>Donec viverra eleifend lacus, vitae ullamcorper metus. Sed sollicitudin ipsum quis nunc sollicitudin ultrices. Donec euismod scelerique ligula. Maescenas eu varius risus eu aliquet arcu.</p>
                         </div>
-                    </div>
-                </section>
+                    </li>
+                </ul>
                 <form action="submit" class="submitCommentForm">
                     <label for="name">Name</label>
                     <input type="text" name="name" id="name" placeholder="Name">
