home page layout complete

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                     </div>
                     <div class="willowsJourney__textBox">
                         <h3>Willow's Journey</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pulvinar tortor nulla elementum eleifend. Vestibulum consequat vestibulum felis pharetra luctus. Quisque interdum orci quis convallis dapibus nulla pulvinar tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pulvinar tortor nulla elementum eleifend. Vestibulum consequat vestibulum felis pharetra luctus.</p>
-                        <button>Find out more</button>
+                        <p class="willowsJourney__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pulvinar tortor nulla elementum eleifend. Vestibulum consequat vestibulum felis pharetra luctus. Quisque interdum orci quis convallis dapibus nulla pulvinar tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pulvinar tortor nulla elementum eleifend. Vestibulum consequat vestibulum felis pharetra luctus.</p>
+                        <button class="willowsJourney__button">Find out more</button>
                     </div>
                 </div>
             </div>
@@ -107,15 +107,15 @@
         <!-- fullWidthMeadowImage SECTION ENDS -->
         <!-- threeImageGallery SECTION BEGINS -->
         <section class="threeImageGallery">
-            <div class="wrapper">
-                <ul class="threeImageContainer">
-                    <li class="threeImageContainer__box">
+            <div class="wrapper theeImageGallery__wrapper">
+                <ul class="threeImageGallery__container">
+                    <li class="threeImageGallery__box">
                         <img src="./willowAssets/home-image-6.jpg" alt="road leading to a misty bend at the end">
                     </li>
-                    <li class="threeImageContainer__box">
+                    <li class="threeImageGallery__box">
                         <img src="./willowAssets/home-image-7.jpg" alt="bowl of whole citrus fruit and bowl of sliced citrus fruit in the corner">
                     </li>
-                    <li class="threeImageContainer__box">
+                    <li class="threeImageGallery__box">
                         <img src="./willowAssets/home-image-8.jpg" alt="stairs in front of a dark wall with gold pattern">
                     </li>
                 </ul>
@@ -124,25 +124,53 @@
         <!-- threeImageGallery SECTION ENDS -->
         <!-- additionalLinks SECTION BEGINS -->
         <section class="additionalLinks">
-            <div class="wrapper">
-                <div class="topHalf">
-                    <div class="topHalf__box">
-                        <h4>Photos</h4>
-                        <p>Ut felis</p>
+            <div class="wrapper additionalLinks__wrapper">
+                <div class="additionalLinks__topHalf">
+                    <div class="additionalLinks__box">
+                        <div class="additionalLinks__iconBox">
+                            <div class="additionalLinks__circle">
+                                <i class="fas fa-image"></i>
+                            </div>
+                        </div>
+                        <div class="additionalLinks__textBox">
+                            <h4>Photos</h4>
+                            <p class="additionalLinks__text">Ut felis eros, vehicula eu magna nec, laoreet blandit nisi. Fusce auctor erat ac sagittis mattis. Mauris tempus velit sem, sit amet imperdiet dolor placerat et.</p>
+                        </div>
                     </div>
-                    <div class="topHalf__box">
-                        <h4>About</h4>
-                        <p>Ut felis eros, vehicula eu magna nec, laoreet blandit nisi. Fusce auctor erat ac sagittis mattis. Mauris tempus velit sem, sit amet imperdiet dolor placerat et.</p>
+                    <div class="additionalLinks__box">
+                        <div class="additionalLinks__iconBox">
+                            <div class="additionalLinks__circle">
+                                <i class="fas fa-user"></i>
+                            </div>
+                        </div>
+                        <div class="additionalLinks__textBox">
+                            <h4>About</h4>
+                            <p class="additionalLinks__text">Ut felis eros, vehicula eu magna nec, laoreet blandit nisi. Fusce auctor erat ac sagittis mattis. Mauris tempus velit sem, sit amet imperdiet dolor placerat et.</p>
+                        </div>
                     </div>
                 </div>
-                <div class="bottomHalf">
-                    <div class="bottomHalf__box">
-                        <h4>Blog</h4>
-                        <p>Ut felis eros, vehicula eu magna nec, laoreet blandit nisi. Fusce auctor erat ac sagittis mattis. Mauris tempus velit sem, sit amet imperdiet dolor placerat et.</p>
+                <div class="additionalLinks__bottomHalf">
+                    <div class="additionalLinks__box">
+                        <div class="additionalLinks__iconBox">
+                            <div class="additionalLinks__circle">
+                                <i class="fas fa-desktop"></i>
+                            </div>
+                        </div>
+                        <div class="additionalLinks__textBox">
+                            <h4>Blog</h4>
+                            <p class="additionalLinks__text">Ut felis eros, vehicula eu magna nec, laoreet blandit nisi. Fusce auctor erat ac sagittis mattis. Mauris tempus velit sem, sit amet imperdiet dolor placerat et.</p>
+                        </div>
                     </div>
-                    <div class="bottomHalf__box">
-                        <h4>Contact Me</h4>
-                        <p>Ut felis eros, vehicula eu magna nec, laoreet blandit nisi. Fusce auctor erat ac sagittis mattis. Mauris tempus velit sem, sit amet imperdiet dolor placerat et.</p>
+                    <div class="additionalLinks__box">
+                        <div class="additionalLinks__iconBox">
+                            <div class="additionalLinks__circle">
+                                <i class="fas fa-phone"></i>
+                            </div>
+                        </div>
+                        <div class="additionalLinks__textBox">
+                            <h4>Contact Me</h4>
+                            <p class="additionalLinks__text">Ut felis eros, vehicula eu magna nec, laoreet blandit nisi. Fusce auctor erat ac sagittis mattis. Mauris tempus velit sem, sit amet imperdiet dolor placerat et.</p>
+                        </div>
                     </div>
                 </div>
             </div>
