completed top half of blog and news

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a href="#about" class="topNavBar__link">About</a>
                 </li>
                 <li class="topNavBar__item">
-                    <a href="#" class="topNavBar__link">Willow</a>
+                    <p class="topNavBar__word">Willow</a>
                 </li>
                 <li class="topNavBar__item">
                     <a href="willowBlogPost.html" class="topNavBar__link">Blog</a>
