--- a/willowBlogPost.html
+++ b/willowBlogPost.html
@@ -25,7 +25,7 @@
                     <a href="index.html#about" class="topNavBar__link">About</a>
                 </li>
                 <li class="topNavBar__item">
-                    <a href="#" class="topNavBar__link">Willow</a>
+                    <p class="topNavBar__word">Willow</a>
                 </li>
                 <li class="topNavBar__item">
                     <a href="#" class="topNavBar__link">Blog</a>
@@ -38,59 +38,66 @@
     </nav>
     <!-- topNavBar ENDS -->
     <!-- HEADER BEGINS -->
-    <header>
-        <h2>Blog &amp; News</h2>
+    <header class="blogAndNewsHeader">
+        <div class="wrapper">
+            <h2 class="blogAndNewsHeader__title">Blog &amp; News</h2>
+        </div>
     </header>
     <!-- HEADER ENDS -->
 
     <section class="midPortion">
-        < class="wrapper">
-            <!-- ARTICLE BEGINS -->
-            <article>
-                <h4>My favourite travel destinations</h4>
-                <p>Monday October 8th, 2018 by Willow</p>
-                <p>Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus. Nam tempus vel odio vitae aliquam.</p>
-                <p>In imperdiet eros id lacus vestibulum vestibulum. Suspendisse fermentum sem sagittis ante venenatis egestas quis vel justo. Maescenas semper suscipit nunc, sed aliquam sapien convallis eu. Nulla ut turpis in diam dapibus consequat. Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend lacu.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pretium pretium tempor. Ut eget imperdiet neque. In volutpat ante semper diam molestie, et aliquam erat laoreet. Sed sit amet arcu aliquet, molestie justo at, auctor nunc. Phasellus ligula ipsum, volutpat eget semper id, viverra eget nibh. Suspendisse luctus mattis cursus. Nam consectetur ante at nisl hendrerit gravida. Donec vehicula rhoncus mattis. Mauris dignissim semper mattis. Fusce porttitor a mi at suscipit. Praesent facilisis dolor sapien, vel sodales augue mollis ut. Mauris venenatis magna eu tortor posuere luctus. Aenean tincidunt turpis sed dui aliquam vehicula. Praesent nec elit non dolor consectetur tincidunt sed in felis. Donec elementum, lacus at mattis tincidunt, eros magna faucibus sem, in condimentum est augue tristique risus.</p>
-                <p>Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus. Nam tempus vel odio vitae aliquam.</p>
-                <p>In imperdiet eros id lacus vestibulum vestibulum. Suspendisse fermentum sem sagittis ante venenatis egestas quis vel justo. Maescenas semper suscipit nunc, sed aliquam sapien convallis eu. Nulla ut turpis in diam dapibus consequat. Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend lacu.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pretium pretium tempor. Ut eget imperdiet neque. In volutpat ante semper diam molestie, et aliquam erat laoreet. Sed sit amet arcu aliquet, molestie justo at, auctor nunc. Phasellus ligula ipsum, volutpat eget semper id, viverra eget nibh. Suspendisse luctus mattis cursus. Nam consectetur ante at nisl hendrerit gravida. Donec vehicula rhoncus mattis.</p>
-            </article>
-            <!-- ARTICLE ENDS -->
+        <div class="wrapper midPortion__wrapper">
+            <div class="blogmidPortionTopHalf">
+                <div class="leftSideTop">
+                    <!-- ASIDE #1 BEGINS -->
+                    <aside class="aboutWillow">
+                        <div class="aboutWillow__container">
+                            <div class="aboutWillow__box">
+                                <img src="./willowAssets/blog-image-2.jpg" alt="photo of Willow looking at camera, palm leaf covering half her face">
+                            </div>
+                            <div class="aboutWillow__box">
+                                <h5 class="aboutWillow__title">About Willow</h5>
+                                <p class="aboutWillow__text">Lorem ipusm nam dapibus nisl vitae elit fringilla rutrum. Aenean sollicitudin, erat a elementum. <a href="index.html" class="aboutWillow__link">Find out more.</a></p>
+                            </div>
+                        </div>
+                    </aside>
+                    <!-- ASIDE #1 ENDS -->
 
-            <!-- ASIDE #1 BEGINS -->
-            <aside class="aboutWillow">
-                <div class="aboutWillowContainer">
-                    <div class="aboutWillowContainer__box awImg">
-                        <img src="./willowAssets/blog-image-2.jpg" alt="photo of Willow looking at camera, palm leaf covering half her face">
-                    </div>
-                    <div class="aboutWillowContainer__box awText">
-                        <h5>About Willow</h5>
-                        <p>Lorem ipusm nam dapibus nisl vitae elit fringilla rutrum. Aenean sollicitudin, erat a elementum. <a href="index.html" class="aboutWillowContainer__link">Find out more.</a></p>
-                    </div>
+                    <!-- ASIDE #2 BEGINS -->
+                    <aside class="recentPosts">
+                        <h5>Recent Posts</h5>
+                        <ul class="recentPosts__list">
+                            <li class="recentPosts__item">
+                                <p class="recentPosts__text">Donec facilisis tortor ut</p>
+                            </li>
+                            <li class="recentPosts__item">
+                                <p class="recentPosts__text">Augue lacinia at viverra</p>
+                            </li>
+                            <li class="recentPosts__item">
+                                <p class="recentPosts__text">Semper sed sapien metus</p>
+                            </li>
+                            <li class="recentPosts__item">
+                                <p class="recentPosts__text">Scelerisque nec pharetra id</p>
+                            </li>
+                        </ul>
+                    </aside>
+                    <!-- ASIDE #2 ENDS -->
                 </div>
-            </aside>
-            <!-- ASIDE #1 ENDS -->
-
-            <!-- ASIDE #2 BEGINS -->
-            <aside class="recentPosts">
-                <h5>Recent Posts</h5>
-                <ul class="recentPosts__list">
-                    <li class="recentPosts__item">
-                        <p class="recentPosts__text">Donec facilisis tortor ut</p>
-                    </li>
-                    <li class="recentPosts__item">
-                        <p class="recentPosts__text">Augue lacinia at viverra</p>
-                    </li>
-                    <li class="recentPosts__item">
-                        <p class="recentPosts__text">Semper sed sapien metus</p>
-                    </li>
-                    <li class="recentPosts__item">
-                        <p class="recentPosts__text">Scelerisque nec pharetra id</p>
-                    </li>
-                </ul>
-            </aside>
-            <!-- ASIDE #2 ENDS -->
+                <div class="rightSideTop">
+                    <!-- ARTICLE BEGINS -->
+                    <article class="favouriteTravelDestinations">
+                        <h4 class="favouriteTravelDestinations__title">My favourite travel destinations</h4>
+                        <p class="favouriteTravelDestinations__text">Monday October 8th, 2018 by Willow</p>
+                        <p class="favouriteTravelDestinations__text">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus. Nam tempus vel odio vitae aliquam.</p>
+                        <p class="favouriteTravelDestinations__text">In imperdiet eros id lacus vestibulum vestibulum. Suspendisse fermentum sem sagittis ante venenatis egestas quis vel justo. Maescenas semper suscipit nunc, sed aliquam sapien convallis eu. Nulla ut turpis in diam dapibus consequat. Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend lacu.</p>
+                        <p class="favouriteTravelDestinations__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pretium pretium tempor. Ut eget imperdiet neque. In volutpat ante semper diam molestie, et aliquam erat laoreet. Sed sit amet arcu aliquet, molestie justo at, auctor nunc. Phasellus ligula ipsum, volutpat eget semper id, viverra eget nibh. Suspendisse luctus mattis cursus. Nam consectetur ante at nisl hendrerit gravida. Donec vehicula rhoncus mattis. Mauris dignissim semper mattis. Fusce porttitor a mi at suscipit. Praesent facilisis dolor sapien, vel sodales augue mollis ut. Mauris venenatis magna eu tortor posuere luctus. Aenean tincidunt turpis sed dui aliquam vehicula. Praesent nec elit non dolor consectetur tincidunt sed in felis. Donec elementum, lacus at mattis tincidunt, eros magna faucibus sem, in condimentum est augue tristique risus.</p>
+                        <p class="favouriteTravelDestinations__text">Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus. Nam tempus vel odio vitae aliquam.</p>
+                        <p class="favouriteTravelDestinations__text">In imperdiet eros id lacus vestibulum vestibulum. Suspendisse fermentum sem sagittis ante venenatis egestas quis vel justo. Maescenas semper suscipit nunc, sed aliquam sapien convallis eu. Nulla ut turpis in diam dapibus consequat. Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend lacu.</p>
+                        <p class="favouriteTravelDestinations__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pretium pretium tempor. Ut eget imperdiet neque. In volutpat ante semper diam molestie, et aliquam erat laoreet. Sed sit amet arcu aliquet, molestie justo at, auctor nunc. Phasellus ligula ipsum, volutpat eget semper id, viverra eget nibh. Suspendisse luctus mattis cursus. Nam consectetur ante at nisl hendrerit gravida. Donec vehicula rhoncus mattis.</p>
+                    </article>
+                    <!-- ARTICLE ENDS -->
+                </div>
+            </div>
 
             <!-- COMMENTS SECTION BEGINS -->
             <section class="comments">
