--- a/willowContact.html
+++ b/willowContact.html
@@ -25,7 +25,7 @@
                     <a href="index.html#about" class="topNavBar__link">About</a>
                 </li>
                 <li class="topNavBar__item">
-                    <a href="#" class="topNavBar__link" class="willowLogo">Willow</a>
+                    <p class="topNavBar__word">Willow</a>
                 </li>
                 <li class="topNavBar__item">
                     <a href="willowBlogPost.html" class="topNavBar__link">Blog</a>
@@ -38,44 +38,47 @@
     </nav>
     <!-- topNavBar ENDS -->
     <!-- HEADER BEGINS -->
-    <header class="homeHeader">
-        <h2>Contact Me</h2>
+    <header class="contactHeader">
+        <h2 class="contactHeader__title">Contact Me</h2>
     </header>
     <!-- HEADER ENDS -->
 
     <!-- MAIN SECTION BEGINS -->
-    <form action="submit" class="submitContactForm">
-        <label for="name">Name</label>
-        <input type="text" name="name" id="name" placeholder="Name">
-        <label for="email">Email address</label>
-        <input type="email" name="email" id="email" placeholder="Email address">
-        <label for="message">Message</label>
-        <textarea name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea>
-        <button type="submit">Submit</button>
-    </form>
+    <main class="mainPortionContact">
+        <form action="submit" class="submitContactForm">
+            <label for="name">Name</label>
+            <input type="text" name="name" id="name" placeholder="Name">
+            <label for="email">Email address</label>
+            <input type="email" name="email" id="email" placeholder="Email address">
+            <label for="message">Message</label>
+            <textarea name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea>
+            <button type="submit">Submit</button>
+        </form>
+        <!-- ASIDE BEGINS -->
+        <aside class="contactInfoBox">
+            <ul class="socialMediaIcons">
+                <li class="socialMediaIcons__item">
+                    <a href="#" class="socialMediaIcons__iconLink"><i class="fab fa-facebook-f"></i></a>
+                </li>
+                <li class="socialMediaIcons__item">
+                    <a href="#" class="socialMediaIcons__iconLink"><i class="fab fa-twitter"></i></a>
+                </li>
+                <li class="socialMediaIcons__item">
+                    <a href="#" class="socialMediaIcons__iconLink"><i class="fab fa-linkedin-in"></i></a>
+                </li>
+                <li class="socialMediaIcons__item">
+                    <a href="#" class="socialMediaIcons__iconLink"><i class="fab fa-instagram"></i></a>
+                </li>
+            </ul>
+            <a href="mailto:info@email.com"><p>info@email.com</p></a>
+            <p>123 - 456 - 7890 <br/>
+            123 Queen Street West, Unit 10 <br/>
+            Toronto, Ontario </br>
+            M5V2D5</p>
+        </aside>
+        <!-- ASIDE ENDS -->
+    </main>
     <!-- MAIN SECTION ENDS -->
-
-    <!-- ASIDE BEGINS -->
-    <ul class="socialMediaIcons">
-        <li class="socialMediaIcons__item">
-            <a href="#" class="socialMediaIcons__iconLink"><i class="fab fa-facebook-f"></i></a>
-        </li>
-        <li class="socialMediaIcons__item">
-            <a href="#" class="socialMediaIcons__iconLink"><i class="fab fa-twitter"></i></a>
-        </li>
-        <li class="socialMediaIcons__item">
-            <a href="#" class="socialMediaIcons__iconLink"><i class="fab fa-linkedin-in"></i></a>
-        </li>
-        <li class="socialMediaIcons__item">
-            <a href="#" class="socialMediaIcons__iconLink"><i class="fab fa-instagram"></i></a>
-        </li>
-    </ul>
-    <a href="mailto:info@email.com"><p>info@email.com</p></a>
-    <p>123 - 456 - 7890 <br/>
-    123 Queen Street West, Unit 10 <br/>
-    Toronto, Ontario </br>
-    M5V2D5</p>
-    <!-- ASIDE ENDS -->
 
     <!-- FOOTER BEGINS -->
     <footer>
