contact me page complete

--- a/willowBlogPost.html
+++ b/willowBlogPost.html
@@ -46,9 +46,9 @@
     <!-- HEADER ENDS -->
 
     <section class="midPortion">
-        <div class="wrapper midPortion__wrapper">
+        <div class="wrapper">
             <div class="blogMidPortionTopHalf">
-                <div class="leftSideTop">
+                <div class="blogMidPortionTopHalf__leftSideTop">
                     <!-- ASIDE #1 BEGINS -->
                     <aside class="aboutWillow">
                         <div class="aboutWillow__container">
@@ -83,7 +83,7 @@
                     </aside>
                     <!-- ASIDE #2 ENDS -->
                 </div>
-                <div class="rightSideTop">
+                <div class="blogMidPortionTopHalf__rightSideTop">
                     <!-- ARTICLE BEGINS -->
                     <article class="favouriteTravelDestinations">
                         <h4 class="favouriteTravelDestinations__title">My favourite travel destinations</h4>
@@ -100,8 +100,8 @@
             </div>
 
             <div class="blogMidPortionBottomHalf">
-                <div class="leftSideBottom"></div>
-                <div class="rightSideBottom">
+                <div class="blogMidPortionBottomHalf__leftSideBottom"></div>
+                <div class="blogMidPortionBottomHalf__rightSideBottom">
                     <!-- COMMENTS SECTION BEGINS -->
                     <section class="comments">
                         <ul class="comments__list">
