--- a/willowContact.html
+++ b/willowContact.html
@@ -13,7 +13,7 @@
     <title>Contact Willow</title>
     <script src="https://kit.fontawesome.com/57818ef07c.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="contactFormBody">
     <!-- topNavBar BEGINS-->
     <nav class="topNavBar">
         <div class="wrapper">
@@ -39,44 +39,60 @@
     <!-- topNavBar ENDS -->
     <!-- HEADER BEGINS -->
     <header class="contactHeader">
-        <h2 class="contactHeader__title">Contact Me</h2>
+        <div class="wrapper">
+            <h2 class="contactHeader__title">Contact Me</h2>
+        </div>
     </header>
     <!-- HEADER ENDS -->
 
     <!-- MAIN SECTION BEGINS -->
     <main class="mainPortionContact">
-        <form action="submit" class="submitContactForm">
-            <label for="name">Name</label>
-            <input type="text" name="name" id="name" placeholder="Name">
-            <label for="email">Email address</label>
-            <input type="email" name="email" id="email" placeholder="Email address">
-            <label for="message">Message</label>
-            <textarea name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea>
-            <button type="submit">Submit</button>
-        </form>
-        <!-- ASIDE BEGINS -->
-        <aside class="contactInfoBox">
-            <ul class="socialMediaIcons">
-                <li class="socialMediaIcons__item">
-                    <a href="#" class="socialMediaIcons__iconLink"><i class="fab fa-facebook-f"></i></a>
-                </li>
-                <li class="socialMediaIcons__item">
-                    <a href="#" class="socialMediaIcons__iconLink"><i class="fab fa-twitter"></i></a>
-                </li>
-                <li class="socialMediaIcons__item">
-                    <a href="#" class="socialMediaIcons__iconLink"><i class="fab fa-linkedin-in"></i></a>
-                </li>
-                <li class="socialMediaIcons__item">
-                    <a href="#" class="socialMediaIcons__iconLink"><i class="fab fa-instagram"></i></a>
-                </li>
-            </ul>
-            <a href="mailto:info@email.com"><p>info@email.com</p></a>
-            <p>123 - 456 - 7890 <br/>
-            123 Queen Street West, Unit 10 <br/>
-            Toronto, Ontario </br>
-            M5V2D5</p>
-        </aside>
-        <!-- ASIDE ENDS -->
+        <div class="wrapper">
+            <div class="mainPortionContact__container">
+                <div class="mainPortionContact__leftSide">
+                    <!-- ASIDE BEGINS -->
+                    <aside class="contactInfo">
+                        <ul class="contactInfo__socialList">
+                            <li class="contactInfo__socialItem">
+                                <a href="#" class="contactInfo__iconLink"><i class="fab fa-facebook-f"></i></a>
+                            </li>
+                            <li class="contactInfo__socialItem">
+                                <a href="#" class="contactInfo__iconLink"><i class="fab fa-twitter"></i></a>
+                            </li>
+                            <li class="contactInfo__socialItem">
+                                <a href="#" class="contactInfo__iconLink"><i class="fab fa-linkedin-in"></i></a>
+                            </li>
+                            <li class="contactInfo__socialItem">
+                                <a href="#" class="contactInfo__iconLink"><i class="fab fa-instagram"></i></a>
+                            </li>
+                        </ul>
+                        <a href="mailto:info@email.com"><p class="contactInfo__email">info@email.com</p></a>
+                        <p class="contactInfo__address">123 - 456 - 7890 <br/>
+                        123 Queen Street West, Unit 10 <br/>
+                        Toronto, Ontario </br>
+                        M5V2D5</p>
+                    </aside>
+                    <!-- ASIDE ENDS -->
+                </div>
+                <div class="mainPortionContact__rightSide">
+                    <form action="submit" class="contactForm">
+                        <div class="contactForm__partOne">
+                            <label for="name" class="sr-only">Name</label>
+                            <input type="text" name="name" id="name" placeholder="Name" class="contactForm__name">
+                            <label for="email" class="sr-only">Email address</label>
+                            <input type="email" name="email" id="email" placeholder="Email address" class="contactForm__email">
+                        </div>
+                        <div class="contactForm__partTwo">
+                            <label for="message" class="sr-only">Message</label>
+                            <textarea name="message" id="message" cols="30" rows="10" placeholder="Message" class="contactForm__messageBox"></textarea>
+                        </div>
+                        <div class="contactForm__partThree">
+                            <button type="submit" class="contactForm__submitButton">Submit</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </main>
     <!-- MAIN SECTION ENDS -->
 
