--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Naming Convention Used: BEM (https://css-tricks.com/bem-101/) w/ camelCase  -->
+<!-- Naming Convention Used: BEM (https://css-tricks.com/bem-101/) w/ camelCase and Media Query Bubbling (https://www.creativebloq.com/how-to/how-to-structure-media-queries-in-sass) -->
 
 <!-- File & Folder Convention Used: 7-1 Pattern (https://sass-guidelin.es/#the-7-1-pattern) w/ camelCase  -->
 
@@ -129,7 +129,7 @@
                     <div class="additionalLinks__box">
                         <div class="additionalLinks__iconBox">
                             <div class="additionalLinks__circle">
-                                <i class="fas fa-image"></i>
+                                <i class="fas fa-image" aria-hidden="true"></i>
                             </div>
                         </div>
                         <div class="additionalLinks__textBox">
@@ -140,7 +140,7 @@
                     <div class="additionalLinks__box">
                         <div class="additionalLinks__iconBox">
                             <div class="additionalLinks__circle">
-                                <i class="fas fa-user"></i>
+                                <i class="fas fa-user" aria-hidden="true"></i>
                             </div>
                         </div>
                         <div class="additionalLinks__textBox">
@@ -153,7 +153,7 @@
                     <div class="additionalLinks__box">
                         <div class="additionalLinks__iconBox">
                             <div class="additionalLinks__circle">
-                                <i class="fas fa-desktop"></i>
+                                <i class="fas fa-desktop" aria-hidden="true"></i>
                             </div>
                         </div>
                         <div class="additionalLinks__textBox">
@@ -164,7 +164,7 @@
                     <div class="additionalLinks__box">
                         <div class="additionalLinks__iconBox">
                             <div class="additionalLinks__circle">
-                                <i class="fas fa-phone"></i>
+                                <i class="fas fa-phone" aria-hidden="true"></i>
                             </div>
                         </div>
                         <div class="additionalLinks__textBox">
