--- a/willowContact.html
+++ b/willowContact.html
@@ -1,4 +1,4 @@
-<!-- Naming Convention Used: BEM (https://css-tricks.com/bem-101/) w/ camelCase  -->
+<!-- Naming Convention Used: BEM (https://css-tricks.com/bem-101/) w/ camelCase and Media Query Bubbling (https://www.creativebloq.com/how-to/how-to-structure-media-queries-in-sass) -->
 
 <!-- File & Folder Convention Used: 7-1 Pattern (https://sass-guidelin.es/#the-7-1-pattern) w/ camelCase  -->
 
@@ -54,16 +54,16 @@
                     <aside class="contactInfo">
                         <ul class="contactInfo__socialList">
                             <li class="contactInfo__socialItem">
-                                <a href="#" class="contactInfo__iconLink"><i class="fab fa-facebook-f"></i></a>
+                                <a href="#" class="contactInfo__iconLink" aria label="Go to Willow's Facebook page"><i class="fab fa-facebook-f" aria-hidden="true"></i></a>
                             </li>
                             <li class="contactInfo__socialItem">
-                                <a href="#" class="contactInfo__iconLink"><i class="fab fa-twitter"></i></a>
+                                <a href="#" class="contactInfo__iconLink" aria-label="Go to Willow's Twitter page"><i class="fab fa-twitter" aria-hidden="true"></i></a>
                             </li>
                             <li class="contactInfo__socialItem">
-                                <a href="#" class="contactInfo__iconLink"><i class="fab fa-linkedin-in"></i></a>
+                                <a href="#" class="contactInfo__iconLink" aria-label="Go to Willow's LinkedIn page"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a>
                             </li>
                             <li class="contactInfo__socialItem">
-                                <a href="#" class="contactInfo__iconLink"><i class="fab fa-instagram"></i></a>
+                                <a href="#" class="contactInfo__iconLink" aria-label="Go to Willow's Instagram page"><i class="fab fa-instagram" aria-hidden="true"></i></a>
                             </li>
                         </ul>
                         <a href="mailto:info@email.com"><p class="contactInfo__email">info@email.com</p></a>
