--- a/index.html
+++ b/index.html
@@ -34,14 +34,28 @@
                     <a href="willowContact.html" class="topNavBar__link">Contact</a>
                 </li>
             </ul>
+            <button class="topNavBar__hamburgerButton show" aria-label="Click to view site navigation">
+                <i class="fa fa-bars" aria-hidden="true"></i>
+            </button>
+            <button class="topNavBar__exitButton" aria-label="Click to close site navigation">
+                <i class="fas fa-times"></i>
+            </button>
+            <div class="topNavBar__dropdown">
+                <div class="topNavBar__dropdownRow"><a href="#" class="topNavBar__dropdownLink">Home</a></div>
+                <div class="topNavBar__dropdownRow"><a href="#about" class="topNavBar__dropdownLink">About</a></div>
+                <div class="topNavBar__dropdownRow"><a href="willowBlogPost.html" class="topNavBar__dropdownLink">Blog</a></div>
+                <div class="topNavBar__dropdownRow"><a href="willowContact.html" class="topNavBar__dropdownLink">Contact</a></div>
+            </div>
         </div>
     </nav>
     <!-- topNavBar ENDS -->
     <!-- HEADER BEGINS -->
     <header class="homeHeader">
         <div class="wrapper homeHeader__wrapper">
-            <img src="./willowAssets/circle-text.png" alt="Text that says 'Daily Musings Of'">
-            <h1>Willow</h1>
+            <div class="homeHeader__text">
+                <img src="./willowAssets/circle-text.png" alt="Text that says 'Daily Musings Of'">
+                <h1 class="homeHeader__title">Willow</h1>
+            </div>
             <img src="./willowAssets/home-image-1.jpeg" alt="photo of Willow in a mustard yellow jacket with palm leaves in the background" class="homeHeader__mainProfileImg">
         </div>
     </header>
@@ -92,7 +106,7 @@
                         <img src="./willowAssets/home-image-4.jpg" alt="Willow entering a leafy garden wearing a mustard yellow jacket">
                     </div>
                     <div class="willowsJourney__textBox">
-                        <h3>Willow's Journey</h3>
+                        <h3 class="willowsJourney__title">Willow's Journey</h3>
                         <p class="willowsJourney__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pulvinar tortor nulla elementum eleifend. Vestibulum consequat vestibulum felis pharetra luctus. Quisque interdum orci quis convallis dapibus nulla pulvinar tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pulvinar tortor nulla elementum eleifend. Vestibulum consequat vestibulum felis pharetra luctus.</p>
                         <button class="willowsJourney__button">Find out more</button>
                     </div>
@@ -137,7 +151,7 @@
                             <p class="additionalLinks__text">Ut felis eros, vehicula eu magna nec, laoreet blandit nisi. Fusce auctor erat ac sagittis mattis. Mauris tempus velit sem, sit amet imperdiet dolor placerat et.</p>
                         </div>
                     </div>
-                    <div class="additionalLinks__box">
+                    <div class="additionalLinks__box additionalLinks__secondBox">
                         <div class="additionalLinks__iconBox">
                             <div class="additionalLinks__circle">
                                 <i class="fas fa-user" aria-hidden="true"></i>
@@ -161,7 +175,7 @@
                             <p class="additionalLinks__text">Ut felis eros, vehicula eu magna nec, laoreet blandit nisi. Fusce auctor erat ac sagittis mattis. Mauris tempus velit sem, sit amet imperdiet dolor placerat et.</p>
                         </div>
                     </div>
-                    <div class="additionalLinks__box">
+                    <div class="additionalLinks__box additionalLinks__secondBox">
                         <div class="additionalLinks__iconBox">
                             <div class="additionalLinks__circle">
                                 <i class="fas fa-phone" aria-hidden="true"></i>
@@ -184,5 +198,10 @@
         <p>Copyright &copy; 2018 HackerYou</p>
     </footer>
     <!-- FOOTER ENDS -->
+
+    <!-- JS LINKS BEGIN -->
+    <script src='https://code.jquery.com/jquery-3.4.0.min.js' integrity='sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=' crossorigin='anonymous'></script>
+    <script src="js/script.js"></script> 
+    <!-- JS LINKS END -->
 </body>
 </html>
