--- a/willowBlogPost.html
+++ b/willowBlogPost.html
@@ -34,6 +34,18 @@
                     <a href="willowContact.html" class="topNavBar__link">Contact</a>
                 </li>
             </ul>
+            <button class="topNavBar__hamburgerButton show" aria-label="Click to view site navigation">
+                <i class="fa fa-bars" aria-hidden="true"></i>
+            </button>
+            <button class="topNavBar__exitButton" aria-label="Click to close site navigation">
+                <i class="fas fa-times"></i>
+            </button>
+            <div class="topNavBar__dropdown">
+                <div class="topNavBar__dropdownRow"><a href="index.html" class="topNavBar__dropdownLink">Home</a></div>
+                <div class="topNavBar__dropdownRow"><a href="index.html#about" class="topNavBar__dropdownLink">About</a></div>
+                <div class="topNavBar__dropdownRow"><a href="#" class="topNavBar__dropdownLink">Blog</a></div>
+                <div class="topNavBar__dropdownRow"><a href="willowContact.html" class="topNavBar__dropdownLink">Contact</a></div>
+            </div>
         </div>
     </nav>
     <!-- topNavBar ENDS -->
@@ -151,5 +163,10 @@
         <p>Copyright &copy; 2018 HackerYou</p>
     </footer>
     <!-- FOOTER ENDS -->
+
+    <!-- JS LINKS BEGIN -->
+    <script src='https://code.jquery.com/jquery-3.4.0.min.js' integrity='sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=' crossorigin='anonymous'></script>
+    <script src="js/script.js"></script> 
+    <!-- JS LINKS END -->
 </body>
 </html>
