all three pages responsive

--- a/willowBlogPost.html
+++ b/willowBlogPost.html
@@ -64,8 +64,8 @@
                     <!-- ASIDE #1 BEGINS -->
                     <aside class="aboutWillow">
                         <div class="aboutWillow__container">
-                            <div class="aboutWillow__box">
-                                <img src="./willowAssets/blog-image-2.jpg" alt="photo of Willow looking at camera, palm leaf covering half her face">
+                            <div class="aboutWillow__box aboutWillow__imageBox">
+                                <img src="./willowAssets/blog-image-2.jpg" alt="photo of Willow looking at camera, palm leaf covering half her face" class="aboutWillow__image">
                             </div>
                             <div class="aboutWillow__box">
                                 <h5 class="aboutWillow__title">About Willow</h5>
