made dropdown list more semantic and added transition for hover states

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
             <button class="topNavBar__exitButton" aria-label="Click to close site navigation">
                 <i class="fas fa-times"></i>
             </button>
-            <div class="topNavBar__dropdown">
-                <div class="topNavBar__dropdownRow"><a href="#" class="topNavBar__dropdownLink">Home</a></div>
-                <div class="topNavBar__dropdownRow"><a href="#about" class="topNavBar__dropdownLink">About</a></div>
-                <div class="topNavBar__dropdownRow"><a href="willowBlogPost.html" class="topNavBar__dropdownLink">Blog</a></div>
-                <div class="topNavBar__dropdownRow"><a href="willowContact.html" class="topNavBar__dropdownLink">Contact</a></div>
-            </div>
+            <ul class="topNavBar__dropdown">
+                <li class="topNavBar__dropdownRow"><a href="#" class="topNavBar__dropdownLink">Home</a></li>
+                <li class="topNavBar__dropdownRow"><a href="#about" class="topNavBar__dropdownLink">About</a></li>
+                <li class="topNavBar__dropdownRow"><a href="willowBlogPost.html" class="topNavBar__dropdownLink">Blog</a></li>
+                <li class="topNavBar__dropdownRow"><a href="willowContact.html" class="topNavBar__dropdownLink">Contact</a></li>
+            </ul>
         </div>
     </nav>
     <!-- topNavBar ENDS -->
